# rust-OSEP

fileless-lat-mouv/: Cargo.toml
fileless-lat-mouv/src/: main.rs
injection-with-syscalls/: Cargo.toml
injection-with-syscalls/src/: main.rs
linux-lib/: Cargo.toml
linux-lib/src/: lib.rs
process-injection/: Cargo.toml
process-injection/examples/: RdpThief.rs  basic.rs  dll.rs  hollow-hell.rs  hollow-sleep.rs  hollow-syscalls.rs  hollow.rs  inject-spooly.rs  test.rs
process-injection/src/: lib.rs  main.rs
win-elevate/: Cargo.toml
win-elevate/examples/: Impersonate_with_pipes.rs
