[package]
name = "fileless-lat-mouv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = {version="0.48.0", features=["Win32_Security", "Win32_System_Services", "Win32_Foundation"]}

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
