[package]
name = "injection-with-syscalls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaes = "0.6.4"
ntapi = "0.4.0"
rust_syscalls = {git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"]}
sysinfo = "0.28.2"
winapi = "0.3.9"

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
