[package]
name = "process-injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaes = "0.6.4"
windows = {version="0.44.0", features=["Win32_System_Threading", "Win32_Foundation", "Win32_System_Memory", "Win32_Security", "Win32_System_Diagnostics_Debug","Win32_System_ProcessStatus"]}

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
